# Voro

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  command.rs  db.rs  main.rs  model.rs  update.rs  utils.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
