[package]
name = "voro"
version = "0.1.0"
edition = "2021"
description = "A fast, minimal CLI tool to save, organize, and run favorite commands"
license = "MIT"

[[bin]]
name = "vo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

[dev-dependencies]
tempfile = "3.10"
